updating the names of the js files

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <script src="js/time-and-date.js"></script>
-    <script src="js/time-and-date.service-unit-tests.js"></script>
+    <script src="js/time-and-date-functions.js"></script>
+    <script src="js/time-and-date-functions-unit-tests.js"></script>
     <h2>Open the Console to View the Unit Tests</h2>
 </body>
 
